--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -14,7 +14,7 @@ author_profile: true
 
 <ul>
 
-<li><a href="http://www.meng-jiang.com/tutorial-kdd20-scikg.html">Scientific Text Mining and Knowledge Graphs</a>. Meng Jiang and Jingbo Shang. <b>KDD</b> 2020.</li>
+<li><a href="https://sites.google.com/appstate.edu/bus2001/home">BUS 2001: Business Career Development - Resume Writing, Professional Networking and Career Exploration </a>. Colt Jensen. <b>KDD</b> 2020.</li>
 <li><a href="/2019-04-22-kdd-tutorial">Constructing and Mining Heterogeneous Information Networks from Massive Text</a>. Jingbo Shang, Jiaming Shen, Liyuan Liu, and Jiawei Han. <b>KDD</b> 2019.</li>
 <li><a href="/2019-08-23-vldb-tutorial">TextCube: Automated Construction and Multidimensional Exploration</a>. Yu Meng, Jiaxin Huang, Jingbo Shang, and Jiawei Han. <b>VLDB</b> 2019.</li>
 <li> <a href="/2018-04-21-kdd-tutorial">Towards Multidimensional Analysis of Text Corpora</a>. Jingbo Shang, Chao Zhang, Jiaming Shen, and Jiawei Han. <b>KDD</b> 2018. </li>
